--- a/public/css/fb.css
+++ b/public/css/fb.css
@@ -55,3 +55,57 @@
     padding-top: 45px;
 }
 
+.control-item {
+    width: 81px;
+    float: right;
+    height: 24px;
+}
+
+.numbers-item {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    overflow: hidden;
+    border: 1px solid #e74b3b;
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    flex-direction: row;
+    position: relative;
+}
+
+.numbers-item__button {
+    max-width: 30%;
+    min-width: 30%;
+    min-height: 100%;
+    max-height: 100%;
+    background: #e74b3b;
+    flex:1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.numbers-item__numbers {
+    margin: 0;
+    min-height: 100%;
+    max-height: 100%;
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
+    flex:1;
+}
+
+.numbers-item__button p {
+    margin: 0;
+    line-height: 1;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: -4px;
+}
+
+.swiper-pagination {
+    display: none !important;
+}
