--- a/public/css/fb.css
+++ b/public/css/fb.css
@@ -1,3 +1,14 @@
+body, #root {
+    background: #0f1013;
+}
+
+a:hover {
+    text-decoration: none !important;
+    color: #fff;
+}
+.swiper-slide {
+    width: 100% !important;
+}
 .kep-login-facebook{
     opacity: 1 !important;
     border:2px solid #3b5998 !important;
@@ -32,12 +43,23 @@
     color: #fff !important;
     font-family: GothamPro-Medium;
 }
+
 .rc-tabs-top .rc-tabs-ink-bar {
     height: 6px;
     background: #df4939;
 }
 .rc-tabs-bar, .rc-tabs-nav-container{
     width: 100%;
+}
+
+.rc-tabs-bar {
+    max-width: 375px;
+    margin: auto;
+    left: 0;
+    right: 0;
+}
+.rc-tabs-ink-bar {
+    max-width: 33.3%;
 }
 .rc-tabs-top{
 
@@ -95,6 +117,10 @@
     color: #fff;
     font-weight: bold;
     flex:1;
+}
+
+.numbers-item__active {
+    cursor: pointer;
 }
 
 .numbers-item__button p {
